--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18",
     "vite": "^7.3.1"
   }
