--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "xlsx": "^0.18.5"
   }
 }
